--- a/themes/nuboot_radix/scss/components/_panel.scss
+++ b/themes/nuboot_radix/scss/components/_panel.scss
@@ -77,7 +77,7 @@ h2.pane-title {
 			display: none;
 		}
 		background-image: none !important;
-	  background-color: transparent;
+	  background-color: transparent !important;
 	}
 }
 .page-manager-wrapper .panel-region {
@@ -123,7 +123,6 @@ h2.pane-title {
 		background-position:50% 50%;
 	  background-size:cover !important;
 	  background-repeat: no-repeat;
-	  overflow:hidden;
 	  position: relative;
 	  z-index: 0;
 		margin-bottom: 15px;
